--- a/asherrepublic/public/index.html
+++ b/asherrepublic/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A resturaunt serving Dominican food near you!"
     />
     <link rel="apple-touch-icon" href="./Flag.png" />
     <!--
